<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="?attr/toolbarWithArrowButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:gravity="center"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/manual_matching"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_down" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="지역" />

    </androidx.appcompat.widget.Toolbar>

    <HorizontalScrollView
        android:id="@+id/filterScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/orderChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:visibility="visible"
            app:checkedChip="@id/chipInitialize"
            app:chipSpacingHorizontal="4dp"
            app:chipSpacingVertical="6dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true"
            tools:visibility="visible">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipInitialize"
                style="@style/Widget.Aoppart6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initialize"
                app:chipIconTint="@color/icon_filter_chip_state_list_reset" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFastDelivery"
                style="@style/Widget.Aoppart6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_stadium_fee"
                app:chipIcon="@drawable/ic_money"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/icon_filter_chip_state_list_delivery_fast" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDeliveryTip"
                style="@style/Widget.Aoppart6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_skill"
                app:chipIcon="@drawable/ic_down_arrow"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/icon_filter_chip_state_list_low_delivery_tip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDefault"
                style="@style/Widget.Aoppart6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stadium_possession"
                app:chipIconTint="@color/icon_filter_chip_state_list_reset" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTopRate"
                style="@style/Widget.Aoppart6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_person"
                app:chipIcon="@drawable/ic_my"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/icon_filter_chip_state_list_reset" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterScrollView" />

    <TextView
        android:id="@+id/noMatchOrMercenaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterScrollView"
        tools:text="&quot;부산&quot; 지역에 매치가 없습니다." />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="24dp"
            android:backgroundTint="@color/icon"
            android:contentDescription="basketButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/addImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            android:src="@drawable/ic_add"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/addButton"
            app:layout_constraintEnd_toEndOf="@id/addButton"
            app:layout_constraintStart_toStartOf="@id/addButton"
            app:layout_constraintTop_toTopOf="@id/addButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
