<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="?attr/toolbarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:gravity="center"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/teamNameContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:padding="5dp">

            <ImageView
                android:id="@+id/downArrowImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_down"
                app:layout_constraintStart_toEndOf="@id/teamNameTextView"
                app:layout_constraintTop_toTopOf="@+id/teamNameContainer" />

            <TextView
                android:id="@+id/teamNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="downArrowImageView"
                app:layout_constraintTop_toTopOf="@id/teamNameContainer"
                tools:text="맨유" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/homeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="지금 버튼을 클릭해서,\n모든 기능을 사용해보세요" />

            <TextView
                android:id="@+id/noticeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:drawablePadding="15dp"
                android:gravity="center"
                app:drawableStartCompat="@drawable/ic_campaign"
                app:drawableTint="@color/icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homeTextView"
                tools:text="자동매칭 떡상 각" />

            <Button
                android:id="@+id/teamStatusButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#F6F6F6"
                android:clickable="false"
                android:drawablePadding="8dp"
                android:drawableTint="@color/icon"
                android:elevation="16dp"
                android:padding="10dp"
                android:text="@string/team_status"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableTopCompat="@drawable/ic_team_status"
                app:layout_constraintEnd_toStartOf="@+id/manualMatchingButton"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noticeTextView" />

            <Button
                android:id="@+id/manualMatchingButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#F6F6F6"
                android:clickable="false"
                android:drawablePadding="8dp"
                android:drawableTint="@color/icon"
                android:elevation="16dp"
                android:padding="10dp"
                android:text="@string/find_match_mercenary"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableTopCompat="@drawable/ic_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/teamStatusButton"
                app:layout_constraintTop_toTopOf="@+id/teamStatusButton" />

            <Button
                android:id="@+id/autoMatchingButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#F6F6F6"
                android:clickable="false"
                android:drawablePadding="8dp"
                android:drawableTint="@color/icon"
                android:elevation="16dp"
                android:padding="15dp"
                android:text="@string/auto_matching"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableTopCompat="@drawable/ic_auto_matching"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamStatusButton" />

            <TextView
                android:id="@+id/newlyStadiumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/newly_stadium"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/autoMatchingButton" />

            <ImageView
                android:id="@+id/newlyStadiumImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newlyStadiumTextView"
                tools:src="@drawable/img_example_stadium" />

            <View
                android:id="@+id/delimiterLineView"
                android:layout_width="0dp"
                android:layout_height="6dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="#E8E8E8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newlyStadiumImageView" />

            <TextView
                android:id="@+id/eventTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/event"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/delimiterLineView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
